bk_ida/gccida/g0/reload_combine
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9128:28: error: subscripted value is not an array, pointer, or vector
if ( !double_reg_address_ok[0] ) 
      ~~~~~~~~~~~~~~~~~~~~~^~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9167:51: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( insn = get_last_insn( ); insn; insn = ( rtx)insn[1] ) 
                                                  ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9187:26: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v0 = (  struct rtx_def *)insn[2]; 
                         ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9195:13: error: expected identifier or '('
 struct set = v0; 
            ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9215:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v1 = mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] != MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9216:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( unsigned __int8 *)( set->fld[0].rtwint + 2)] != MODE_COMPLEX_FLOAT; 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9227:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
plus = ( rtx)set[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9228:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
base = ( rtx)plus[1]; 
             ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9233:56: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v5 = **( _WORD **)&prev[2] == 47 ? (  struct rtx_def *)prev[2] : single_set_2( prev, *( rtx *)&prev[2]); 
                                                       ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9272:6: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v6 = mode_class_0[*( ( unsigned __int8 *)reg + 2)] != MODE_COMPLEX_INT 
     ^~~~~~~~~~~~
     mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9273:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
&& mode_class_0[*( ( unsigned __int8 *)reg + 2)] != MODE_COMPLEX_FLOAT; 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9277:28: error: use of undeclared identifier 'machine_mode'
index_reg = gen_rtx_REG( ( machine_mode)*( ( unsigned __int8 *)reg + 2), i); 
                           ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9279:35: error: use of undeclared identifier 'machine_mode'
reg_sum = gen_rtx_fmt_ee( PLUS, ( machine_mode)*( ( unsigned __int8 *)reg + 2), index_reg, base); 
                                  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9317:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
*np = ( rtx)( *np)[1]; 
            ^~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9339:20: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                   ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9339:48: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( link = ( rtx)insn[4]; link; link = ( rtx)link[1] ) 
                                               ^~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9378:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[*( ( unsigned __int8 *)usage_rtx + 2)] == MODE_COMPLEX_INT 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9379:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)usage_rtx + 2)] == MODE_COMPLEX_FLOAT ) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/reload1.c:9417:53: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
for ( note = insn[3].fld[0].rtx; note; note = ( rtx)note[1] ) 
                                                    ^~~~~~~
19 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/reload_combine/src/obj/reload1.o] Error 1
